5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1635_2703.log
== TEST (2019-04-04 19:04:52) 
-- CODE:
idade = float(input("digite sua idade: "))
if (idade >= 18):
	mensagem: eleitor
else:
	mensagem = nao_eleitor
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:05:03) 
-- CODE:
idade = float(input("digite sua idade: "))
if (idade >= 18):
	mensagem = eleitor
else:
	mensagem = nao_eleitor
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:05:48) 
-- CODE:
idade = float(input("digite sua idade: "))
if (idade >= 18):
	mensagem = eleitor
else:
	mensagem = nao_eleitor
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:06:16) 
-- CODE:
idade = float(input("digite sua idade: "))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:06:23) 
-- CODE:
idade = float(input("digite sua idade: "))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:06:31) 
-- CODE:
idade = float(input("digite sua idade: "))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- EXECUTION TIME:
0.182091
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
